voting-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: example-voting-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    alb.ingress.kubernetes.io/subnets: "subnet-08c1afcaa1f18ab99, subnet-0b72b1546b3106d25, subnet-0419600404fdffb80"
    
    alb.ingress.kubernetes.io/group.name: "apps"
    
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    
spec:
  rules:
    - host: vote.auctionhub.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
                  
    - host: result.auctionhub.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
